Update 随笔 “note-2021-12-17”

--- a/content/notes/note-2021-12-17.md
+++ b/content/notes/note-2021-12-17.md
@@ -1,5 +1,5 @@
 ---
-identifier: note-2021-12-17
+identifier: a-fang-gong-fu
 title: 阿房宫赋
 author: 杜牧
 date: 2021-12-17T06:01:47.361Z
@@ -31,55 +31,55 @@ categories:
 　　唉！灭亡六国的是六国自己，不是秦国啊。消灭秦王朝的是秦王朝自己，不是天下的人啊。可叹呀！假使六国各自爱护它的人民，就完全可以依靠人民来抵抗秦国。假使秦王朝又爱护六国的人民，那么皇位就可以传到三世还可以传到万世做皇帝，谁能够族灭它呢？秦人来不及哀悼自己，而后人替他们哀伤；如果后人哀悼他却不把他作为鉴戒吸取教训，也只会使更后的人又来哀悼这后人啊。
 
 ## 注释
-六王毕：六国灭亡了。齐、楚、燕、韩、赵、魏六国的国王，即指六国。毕 ，完结，指为秦国所灭。
-一：统一。
-蜀山兀，阿房出：四川的山光秃了，阿房宫出现了。兀，山高而上平。这里形容山上树木已被砍伐净尽。出，出现，意思是建成。蜀，四川。
-覆压三百余里：（从渭南到咸阳）覆盖了三百多里地。这是形容宫殿楼阁接连不断，占地极广。覆压，覆盖（覆压：应当是指“层层叠叠”）。
-隔离天日：遮蔽了天日。这是形容宫殿楼阁的高大。
-骊山北构而西折，直走咸阳：（阿房宫）从骊山北边建起，折而向西，一直通到咸阳（古咸阳在骊山西北）。走，趋向。\
-二川溶溶：二川，指渭水和樊川。溶溶，河水缓流的样子。\
-廊腰缦回：走廊长而曲折。廊腰，连接高大建筑物的走廊，好像人的腰部，所以这样说。缦，萦绕。回，曲折。\
-檐牙高啄：（突起的）屋檐（像鸟嘴）向上撅起。檐牙，屋檐突起，犹如牙齿。\
-各抱地势：各随地形。这是写楼阁各随地势的高下向背而建筑的状态。\
-钩心斗角：指宫室结构的参差错落，精巧工致。钩心，指各种建筑物都向中心区攒聚。斗角，指屋角互相对峙。如今指各自用尽心机互相排挤。\
-盘盘焉，囷囷（qūn qūn）焉，蜂房水涡：盘旋，屈曲，像蜂房，像水涡。焉，相当于“凛然”“欣然”的“然”，意为...的样子。楼阁依山而筑，所以说像蜂房，像水涡。盘盘，盘旋的样子。囷囷，屈曲的样子，曲折回旋的样子。\
-矗不知其几千万落：矗立着不知它们有几千万座。矗，形容建筑物高高耸立的样子。下文“杳不知其所之也”的“杳”，用法与此相同。落，相当于“座”或者“所”。\
-长桥卧波，未云何龙：长桥卧在水上，没有云怎么（出现了）龙？《易经》有“云从龙”的话，所以人们认为有龙就应该有云。这是用故作疑问的话，形容长桥似龙。\
-复道：在楼阁之间架木筑成的通道。因上下都有通道，叫做复道。霁：雨后天晴\
-冥迷：分辨不清。\
-歌台暖响，春光融融：意思是说，人们在台上唱歌，歌乐声响起来，好像充满着暖意。如同春光那样融和。融融，和乐。\
-舞殿冷袖，风雨凄凄：意思是说，人们在殿中舞蹈，舞袖飘拂，好像带来寒气，如同风雨交加那样凄冷。\
-妃嫔媵嫱（feīpín yìng qiáng）：统指六国王侯的宫妃。她们各有等级（妃的等级比嫔、嫱高）。媵是陪嫁的侍女，也可成为嫔、嫱。下文的“王子皇孙”指六国王侯的女儿，孙女。\
-辞楼下殿，辇（niǎn）来于秦：辞别（六国的）楼阁宫殿，乘辇车来到秦国。\
-明星荧荧，开妆镜也：（光如）明星闪亮，是（宫人）打开梳妆的镜子。荧荧，明亮的样子。下文紧连的四句，句式相同。\
-涨腻：涨起了（一层）脂膏（含有胭脂、香粉的洗脸的“脂水”）。\
-椒兰：两种香料植物，焚烧以熏衣物。\
-辘辘远听：车声越听越远。辘辘，车行的声音。\
-杳：遥远得踪迹全无。\
-一肌一容，尽态极妍：任何一部分肌肤，任何一种姿容，都娇媚极了。态，指姿态的美好。妍，美丽。\
-缦立：久立。缦，通“慢”\
-幸：封建时代皇帝到某处，叫“幸”。妃，嫔受皇帝宠爱，叫“得幸”。\
-三十六年：秦始皇在位共三十六年。按秦始皇二十六年（前221年）统一中国，到三十七年（前209年）死，做了十二年皇帝，这里说三十六年，指其在位年数，形容阿房宫很大，有36年都没有见到皇帝的宫女。\
-收藏：指收藏的金玉珍宝等物。下文的“经营”也指金玉珍宝等物。“精英”，形容词作名词，精品，也有金玉珍宝等物的意思。\
-剽（piāo）掠其人：从人民那里抢来。剽 ，抢劫，掠夺。人，民。唐避唐太宗[李世民](https://so.gushiwen.cn/authorv_755ffc8b28b0.aspx)讳，改民为人。下文“人亦念其家”“六国各爱其人”“秦复爱六国之人”的“人”，与此相同。\
-倚叠：积累。\
-鼎铛（chēng）玉石，金块珠砾：把宝鼎看作铁锅，把美玉看作石头，把黄金看作土块，把珍珠看作石子。铛，平底的浅锅。\
-逦迤（lǐ yǐ）：连续不断。这里有“连接着”、“到处都是”的意思。\
-一人之心，千万人之心也：心，心意，意愿.\
-奈何：怎么，为什么。\
-锱铢（zīzhū）：古代重量名，一锱等于六铢，一铢约等于后来的一两的二十四分之一。锱、铢连用，极言其细微。\
-负栋之柱：承担栋梁的柱子。\
-磷磷：水中石头突立的样子。这里形容突出的钉头。\
-庾（yǔ）：露天的谷仓。\
-九土：九州。\
-独夫：失去人心而极端孤立的统治者。这里指秦始皇。\
-固：顽固。\
-戍卒叫：指陈胜、吴广起义。\
-函谷举：[刘邦](https://so.gushiwen.cn/authorv_2466a6bc5628.aspx)于公元前206年率军先入咸阳，推翻秦朝统治，并派兵守函谷关。举，被攻占。\
-楚人一炬：指[项羽](https://so.gushiwen.cn/authorv_ea0c2ce3af6d.aspx)（楚将项燕的后代）也于公元前206年入咸阳，并焚烧秦的宫殿，大火三月不灭。\
-使：假使。\
-递：传递，这里指王位顺着次序传下去。\
-万世：《史记·秦始皇本纪》载：秦始皇统一六国后，“下诏曰：“朕为始皇帝，后世以计数，二世，三世至于万世，传之无穷。”然而秦朝仅传二世便亡。\
-族：使……灭族。\
-不暇：来不及。\
-哀：哀叹。
+* 六王毕：六国灭亡了。齐、楚、燕、韩、赵、魏六国的国王，即指六国。毕 ，完结，指为秦国所灭。
+* 一：统一。
+* 蜀山兀，阿房出：四川的山光秃了，阿房宫出现了。兀，山高而上平。这里形容山上树木已被砍伐净尽。出，出现，意思是建成。蜀，四川。
+* 覆压三百余里：（从渭南到咸阳）覆盖了三百多里地。这是形容宫殿楼阁接连不断，占地极广。覆压，覆盖（覆压：应当是指“层层叠叠”）。
+* 隔离天日：遮蔽了天日。这是形容宫殿楼阁的高大。
+* 骊山北构而西折，直走咸阳：（阿房宫）从骊山北边建起，折而向西，一直通到咸阳（古咸阳在骊山西北）。走，趋向。
+* 二川溶溶：二川，指渭水和樊川。溶溶，河水缓流的样子。
+* 廊腰缦回：走廊长而曲折。廊腰，连接高大建筑物的走廊，好像人的腰部，所以这样说。缦，萦绕。回，曲折。
+* 檐牙高啄：（突起的）屋檐（像鸟嘴）向上撅起。檐牙，屋檐突起，犹如牙齿。
+* 各抱地势：各随地形。这是写楼阁各随地势的高下向背而建筑的状态。
+* 钩心斗角：指宫室结构的参差错落，精巧工致。钩心，指各种建筑物都向中心区攒聚。斗角，指屋角互相对峙。如今指各自用尽心机互相排挤。
+* 盘盘焉，囷囷（qūn qūn）焉，蜂房水涡：盘旋，屈曲，像蜂房，像水涡。焉，相当于“凛然”“欣然”的“然”，意为...的样子。楼阁依山而筑，所以说像蜂房，像水涡。盘盘，盘旋的样子。囷囷，屈曲的样子，曲折回旋的样子。
+* 矗不知其几千万落：矗立着不知它们有几千万座。矗，形容建筑物高高耸立的样子。下文“杳不知其所之也”的“杳”，用法与此相同。落，相当于“座”或者“所”。
+* 长桥卧波，未云何龙：长桥卧在水上，没有云怎么（出现了）龙？《易经》有“云从龙”的话，所以人们认为有龙就应该有云。这是用故作疑问的话，形容长桥似龙。
+* 复道：在楼阁之间架木筑成的通道。因上下都有通道，叫做复道。霁：雨后天晴
+* 冥迷：分辨不清。
+* 歌台暖响，春光融融：意思是说，人们在台上唱歌，歌乐声响起来，好像充满着暖意。如同春光那样融和。融融，和乐。
+* 舞殿冷袖，风雨凄凄：意思是说，人们在殿中舞蹈，舞袖飘拂，好像带来寒气，如同风雨交加那样凄冷。
+* 妃嫔媵嫱（feīpín yìng qiáng）：统指六国王侯的宫妃。她们各有等级（妃的等级比嫔、嫱高）。媵是陪嫁的侍女，也可成为嫔、嫱。下文的“王子皇孙”指六国王侯的女儿，孙女。
+* 辞楼下殿，辇（niǎn）来于秦：辞别（六国的）楼阁宫殿，乘辇车来到秦国。
+* 明星荧荧，开妆镜也：（光如）明星闪亮，是（宫人）打开梳妆的镜子。荧荧，明亮的样子。下文紧连的四句，句式相同。
+* 涨腻：涨起了（一层）脂膏（含有胭脂、香粉的洗脸的“脂水”）。
+* 椒兰：两种香料植物，焚烧以熏衣物。
+* 辘辘远听：车声越听越远。辘辘，车行的声音。
+* 杳：遥远得踪迹全无。
+* 一肌一容，尽态极妍：任何一部分肌肤，任何一种姿容，都娇媚极了。态，指姿态的美好。妍，美丽。
+* 缦立：久立。缦，通“慢”
+* 幸：封建时代皇帝到某处，叫“幸”。妃，嫔受皇帝宠爱，叫“得幸”。
+* 三十六年：秦始皇在位共三十六年。按秦始皇二十六年（前221年）统一中国，到三十七年（前209年）死，做了十二年皇帝，这里说三十六年，指其在位年数，形容阿房宫很大，有36年都没有见到皇帝的宫女。
+* 收藏：指收藏的金玉珍宝等物。下文的“经营”也指金玉珍宝等物。“精英”，形容词作名词，精品，也有金玉珍宝等物的意思。
+* 剽（piāo）掠其人：从人民那里抢来。剽 ，抢劫，掠夺。人，民。唐避唐太宗李世民讳，改民为人。下文“人亦念其家”“六国各爱其人”“秦复爱六国之人”的“人”，与此相同。
+* 倚叠：积累。
+* 鼎铛（chēng）玉石，金块珠砾：把宝鼎看作铁锅，把美玉看作石头，把黄金看作土块，把珍珠看作石子。铛，平底的浅锅。
+* 逦迤（lǐ yǐ）：连续不断。这里有“连接着”、“到处都是”的意思。
+* 一人之心，千万人之心也：心，心意，意愿.
+* 奈何：怎么，为什么。
+* 锱铢（zīzhū）：古代重量名，一锱等于六铢，一铢约等于后来的一两的二十四分之一。锱、铢连用，极言其细微。
+* 负栋之柱：承担栋梁的柱子。
+* 磷磷：水中石头突立的样子。这里形容突出的钉头。
+* 庾（yǔ）：露天的谷仓。
+* 九土：九州。
+* 独夫：失去人心而极端孤立的统治者。这里指秦始皇。
+* 固：顽固。
+* 戍卒叫：指陈胜、吴广起义。
+* 函谷举：刘邦于公元前206年率军先入咸阳，推翻秦朝统治，并派兵守函谷关。举，被攻占。
+* 楚人一炬：指项羽（楚将项燕的后代）也于公元前206年入咸阳，并焚烧秦的宫殿，大火三月不灭。
+* 使：假使。
+* 递：传递，这里指王位顺着次序传下去。
+* 万世：《史记·秦始皇本纪》载：秦始皇统一六国后，“下诏曰：“朕为始皇帝，后世以计数，二世，三世至于万世，传之无穷。”然而秦朝仅传二世便亡。
+* 族：使......灭族。
+* 不暇：来不及。
+* 哀：哀叹。
