--- a/content/notes/2021-12-21-03-12-46.md
+++ b/content/notes/2021-12-21-03-12-46.md
@@ -5,7 +5,9 @@ tags:
 categories:
   - 随笔
 ---
-我不想在Maven多模块中 deploy 某个 artifacts，能跳过该 artifacts 吗？
+Maven多模块模式下，怎么在 deploy 时跳过某个 artifacts？
+
+<!--more-->
 
 ```xml
 <plugin>
