--- a/content/notes/2021-12-21-03-12-46.md
+++ b/content/notes/2021-12-21-03-12-46.md
@@ -1,13 +1,17 @@
 ---
 date: 2021-12-20T12:45:10.148Z
 tags:
-  - 随笔
+  - Maven
 categories:
   - 随笔
 ---
-Maven多模块模式下，怎么在 deploy 时跳过某个 artifacts？
+【Maven】deploy 时跳过某个模块？
+
+
 
 <!--more-->
+
+POM 配置如下：
 
 ```xml
 <plugin>
