--- a/content/notes/2022-01-04-11-50-07.md
+++ b/content/notes/2022-01-04-11-50-07.md
@@ -1,11 +1,11 @@
 ---
 date: 2022-01-04T11:48:39.076Z
 tags:
-  - 随笔
+  - Maven
 categories:
   - 随笔
 ---
-怎么跳过maven单元测试？
+## 【Maven】怎么跳过maven单元测试？
 
 <!--more-->
 
@@ -75,7 +75,7 @@ mvn install -Dmaven.test.skip=true
 mvn install -DskipTests=false
 ```
 
-或者通过  `maven.test.skip` 配置也可以启用单元测试。
+或者通过 `skip` 配置也可以启用单元测试。
 
 ### 4、注意事项
 
