--- a/content/notes/2022-01-04-12-13-53.md
+++ b/content/notes/2022-01-04-12-13-53.md
@@ -13,7 +13,8 @@ Maven surefire 插件（maven-surefire-plugin）有个配置 `skipAfterFailureCo
 
 ### 前置条件
 
-要用 2.19或更高版本，JUnit 4.0+，或 TestNG 5.10+；
+* maven-surefire-plugin 2.19+；
+* JUnit 4.0+，或 TestNG 5.10+；
 
 ### 使用方法
 
@@ -34,8 +35,6 @@ POM中配置如下：
 </build>
 ```
 
-
-
 ### 常见错误提示
 
 1、如果 TestNG 的版本低于5.10，同时设置了参数 `skipAfterFailureCount`，那么插件运行就会失败，并出现错误：
@@ -52,7 +51,7 @@ POM中配置如下：
 
 ### 功能说明
 
-1、TestNG 跳过了方法（method），而 JUnit 跳过了类（class）。最好使用 junit 4.12+，这个版本中修复了线程安全问题。
+1、TestNG 跳过了方法（method），而 JUnit 跳过了类（class）。**最好使用 junit 4.12+，这个版本中修复了线程安全问题** 。
 
 2、虽然这个功能也适用于 fork 模式，但是在并发模式下，功能不能完全保证(真正的第一次失败，多线程下不好复现)。
 
