--- a/content/notes/2022-01-10-03-41-26.md
+++ b/content/notes/2022-01-10-03-41-26.md
@@ -35,7 +35,7 @@ categories:
 </plugins>
 
 ```
-在 Surefire 2.7中，使用完整的并行选项集不需要额外的依赖项。
+在 Surefire 2.7中，使用并发功能不需要额外的依赖。
 
 从 Surefire 2.16开始，引入了新的线程数属性：
 - `threadCountSuites`
