--- a/content/notes/2022-01-10-03-41-26.md
+++ b/content/notes/2022-01-10-03-41-26.md
@@ -5,17 +5,17 @@ tags:
 categories:
   - 随笔
 ---
-# 【Maven】怎么并发执行单元测试？
+### 【Maven】怎么并发执行单元测试？
 
 从 JUnit 4.7开始，可以并行地运行单元测试。
 
 <!--more-->
 
-## 前置条件
+### 前置条件
 - Junit 4.7+
 
 
-## 使用方法
+### 使用方法
 
 设置 `parallel` 参数，然后指定 `threadCount` 或 `useUnlimitedThreads` 属性。例如:
 
